# user

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  api.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-push-main.yml  build-push-tag.yml
api/: Cargo.toml
api/src/: error.rs  main.rs  openapi.rs  state.rs
api/src/handlers/: get_current_user.rs  get_current_user_settings.rs  get_user_by_display_name.rs  get_user_by_id.rs  get_user_by_sub.rs  get_user_by_username.rs  get_users_by_subs.rs  mod.rs  post_profile_picture_request.rs  update_current_user.rs  update_current_user_settings.rs  user_handler.rs
api/src/middleware/: auth.rs  mod.rs
core/: Cargo.toml
core/src/: application.rs  error.rs  lib.rs
core/src/models/: user.rs
core/src/repository/: mod.rs  user.rs  user_repository.rs
core/src/services/: content.rs  keycloak.rs  mod.rs  user.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/service/: about.md  anatomy.md
helm/user-api/: Chart.yaml  values.yaml
helm/user-api/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  migration-job.yaml  secret.yaml  service.yaml  serviceaccount.yaml
keycloak-config/: realm-export.json
libs/config/: Cargo.toml
libs/config/src/: lib.rs
migrations/: 20250110_init.sql
