[package]
name = "user-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "user-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"

# Logging
env_logger = "0.11"
log = "0.4"

# UUID
uuid = { version = "1.11", features = ["serde", "v4"] }

# Workspace dependencies
config = { path = "../libs/config" }
user-core = { path = "../core" }
