[package]
name = "user-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "user-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Authentication
beep-auth = "0.1"

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
beep-telemetry = "0.1"

# UUID
uuid = { version = "1.11", features = ["serde", "v4"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# OpenAPI & Documentation
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }

# Workspace dependencies
config = { path = "../libs/config" }
user-core = { path = "../core", features = ["openapi"] }
