[package]
name = "user-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "user_core"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
async-trait = "0.1"
utoipa = { version = "5.3", optional = true, features = ["uuid", "chrono"] }

# Workspace dependencies
config = { path = "../libs/config" }

[features]
openapi = ["utoipa"]
